--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # HTML build
-*.html
+
 chapters-html.txt
 
 # Byte-compiled / optimized / DLL files
@@ -130,3 +130,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.claude/settings.local.json
